lijst toegevoegd en gestyled

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <title>Mijn eerste git project</title>
 </head>
 <body>
+<h1>Wat een prachtig eiland</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias architecto corporis doloremque ex harum, in inventore
+    itaque labore laudantium maiores nesciunt nobis nostrum provident quasi quidem rem similique tenetur veniam!</p>
 
+        <ul>
+            <li>ja</li>
+            <li>nee</li>
+            </li>misschien</li>
+        </ul>
+    </li>
 </body>
 </html>
